--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,13 @@
 {
-  "presets": ["react", "es2015", "stage-0"],
+  "presets": ["react", "es2015", "stage-0", "es2017"],
 
   "plugins": [
     "transform-runtime",
     "add-module-exports",
     "transform-decorators-legacy",
-    "transform-react-display-name"
+    "transform-react-display-name",
+    "syntax-class-properties",
+    "transform-class-properties",
   ],
 
   "env": {
