--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-class-properties": "^6.10.2",
+    "babel-plugin-syntax-class-properties": "^6.13.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators": "^6.8.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -32,6 +33,7 @@
     "babel-polyfill": "^6.9.1",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-loose": "^8.0.0",
+    "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-native": "^1.9.0",
     "babel-preset-stage-0": "^6.22.0",
@@ -41,10 +43,12 @@
     "eslint": "^3.2.2",
     "eslint-config-airbnb": "12.0.0",
     "eslint-loader": "^1.4.1",
+    "eslint-plugin-babel": "^4.1.1",
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.0.1",
     "eslint-plugin-react": "^6.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.11.1",
     "happypack": "^3.0.3",
     "jasmine-core": "^2.4.1",
     "json-loader": "^0.5.4",
