--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Client Sites Orderform",
   "main": "dist/orderform.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development  PLATFORM=web webpack-dev-server",
-    "build": "rimraf dist && cross-env NODE_ENV=production webpack",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack/dev.config.js",
+    "build": "rimraf dist && cross-env NODE_ENV=production webpack --config webpack/prod.config.js",
     "test": "cross-env NODE_ENV=development karma start",
     "test-watch": "cross-env NODE_ENV=development karma start --karma-watch",
     "lint": "npm run lint:js && npm run lint:css",
@@ -82,8 +82,8 @@
     "stylelint-config-suitcss": "^8.0.0",
     "typecheck": "^0.1.2",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.1",
+    "webpack": "2.4.1",
     "webpack-bundle-size-analyzer": "^2.6.0",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "2.4.2"
   }
 }
