--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Client Sites Orderform",
   "main": "dist/orderform.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config webpack/dev.config.js",
+    "start": "cross-env NODE_ENV=development && cp ./dist-dll/vendor-dll.bundle.js ./dev-static && webpack-dev-server --config webpack/dev.config.js",
     "build": "rimraf dist && cross-env NODE_ENV=production webpack --config webpack/prod.config.js",
     "test": "cross-env NODE_ENV=development karma start",
     "test-watch": "cross-env NODE_ENV=development karma start --karma-watch",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:js": "eslint 'src/**/*.js' 'src/**/*.jsx' && echo 'JS OK' ; exit 0",
-    "lint:css": "stylelint 'src/**/*.scss' && echo 'CSS OK' ; exit 0"
+    "lint:css": "stylelint 'src/**/*.scss' && echo 'CSS OK' ; exit 0",
+    "build-dll": "rm -rf ./dist-dll && webpack --config webpack/dll.config.js"
   },
   "repository": {
     "type": "git",
